# mlops_pos

./: .gitignore  Dockerfile  README.md  commands.py  datasets.dvc  pyproject.toml
.dvc/: config
cfg/: config.yaml
cfg/datasets/: coco17-pose.yaml
pos_detection/: __init__.py  infer.py  pose_drawer.py  pose_match.py  train.py
pos_detection/datasets/: COCOL.py  __init__.py
pos_detection/model/: YOLOL.py  __init__.py  utils.py
