[tool.poetry]
name = "pos_detection"
version = "0.1.0"
description = "Pose estimation and reacreation"
authors = ["Rog Alexey Sergeevich <pizikxxx97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.12"
opencv-python = "^4.8.0"
ultralytics = "8.1.27"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
fire = "^0.6.0"

[tool.black]
line-length = 90
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "90"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
